test/spec_vectors/struct/fail/module_3.wat
(module (type (struct (field (ref 1)))))